made base as slash only

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "homepage": "https://siddharthanv.github.io/creative-design",
+  "homepage": "https://www.creativedesignconstruction.in",
   "name": "creative-design",
   "private": true,
   "version": "0.0.0",
